authentapp/authent-app.yaml
# ===== Déploiement de l'application AuthentApp =====
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authent-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: authent-app
  template:
    metadata:
      labels:
        app: authent-app
    spec:
      containers:
      - name: authent-app
        image: thysma/authent-app:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "250m"

---
# ===== Service de l'application (accessible de l'extérieur) =====
apiVersion: v1
kind: Service
metadata:
  name: authent-app-service
spec:
  type: LoadBalancer
  selector:
    app: authent-app
  ports:
    - port: 3000
      targetPort: 3000
