authentapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authent-app-ingress
  namespace: authent-app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - authent-app.cluster.local
    secretName: authent-app-tls
  rules:
  - host: authent-app.cluster.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authent-app-service
            port:
              number: 3000
